EDM-1695: Add organizations model / List endpoint
